--- a/model/RNN/rnn.ipynb
+++ b/model/RNN/rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +60,13 @@
     "        lstm_out, _ = self.lstm(x)      # lstm_out shape: (batch_size, seq_length, hidden_size)\n",
     "        last_out = lstm_out[:, -1, :]   # last_out shape: (batch_size, hidden_size)\n",
     "        x = self.fc(last_out)           # x shape: (batch_size, 1)\n",
+    "        x = 7 * torch.tanh(x)           # Apply 7 * tanh() to the output\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +99,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test fold 1, Epoch [0], Average Loss: 0.46481630\n",
+      "Test fold 1, Epoch [10], Average Loss: 0.34865262\n",
+      "Test fold 1, Epoch [20], Average Loss: 0.29276890\n",
+      "Test fold 1, Epoch [30], Average Loss: 0.26231537\n",
+      "Test fold 1, Epoch [40], Average Loss: 0.25448914\n",
+      "Test fold 1, Epoch [50], Average Loss: 0.22291979\n",
+      "Test fold 1, Epoch [60], Average Loss: 0.19289781\n",
+      "Test fold 1, Epoch [70], Average Loss: 0.22121528\n",
+      "Test fold 1, Epoch [80], Average Loss: 0.15772047\n",
+      "Test fold 1, Epoch [90], Average Loss: 0.12858469\n",
+      "Test fold 1, Epoch [100], Average Loss: 0.11251230\n",
+      "Test fold 1, Epoch [110], Average Loss: 0.10531340\n",
+      "Test fold 1, Epoch [120], Average Loss: 0.16416614\n",
+      "Test fold 1, Epoch [130], Average Loss: 0.36207212\n",
+      "Test fold 1, Epoch [140], Average Loss: 0.14088211\n",
+      "Test fold 1, Epoch [150], Average Loss: 0.10753226\n",
+      "Test fold 1, Epoch [160], Average Loss: 0.07836540\n",
+      "Test fold 1, Epoch [170], Average Loss: 0.07547396\n",
+      "Test fold 1, Epoch [180], Average Loss: 0.05787634\n",
+      "Test fold 1, Epoch [190], Average Loss: 0.05871758\n",
+      "Test fold 1, Epoch [200], Average Loss: 0.05326248\n",
+      "Test fold 1, Epoch [210], Average Loss: 0.04680552\n",
+      "Test fold 1, Epoch [220], Average Loss: 0.05365233\n",
+      "Test fold 1, Epoch [230], Average Loss: 0.03943566\n",
+      "Test fold 1, Epoch [240], Average Loss: 0.04692843\n",
+      "Test fold 1, Epoch [250], Average Loss: 0.03538464\n",
+      "Test fold 1, Epoch [260], Average Loss: 0.03711323\n",
+      "Test fold 1, Epoch [270], Average Loss: 0.03403677\n",
+      "Test fold 1, Epoch [280], Average Loss: 0.03309582\n",
+      "Test fold 1, Epoch [290], Average Loss: 0.03293314\n",
+      "Test fold 1, Epoch [300], Average Loss: 0.03457126\n",
+      "Test fold 1, Epoch [310], Average Loss: 0.03292214\n",
+      "Test fold 1, Epoch [320], Average Loss: 0.03361674\n",
+      "Test fold 1, Epoch [330], Average Loss: 0.03280995\n",
+      "Test fold 1, Epoch [340], Average Loss: 0.03127454\n",
+      "Test fold 1, Epoch [350], Average Loss: 0.03106110\n",
+      "Test fold 1, Epoch [360], Average Loss: 0.03062496\n",
+      "Test fold 1, Epoch [370], Average Loss: 0.02732124\n",
+      "Test fold 1, Epoch [380], Average Loss: 0.02906821\n",
+      "Test fold 1, Epoch [390], Average Loss: 0.03002558\n",
+      "Test fold 1, Epoch [400], Average Loss: 0.03070605\n",
+      "Test fold 1, Epoch [410], Average Loss: 0.03008440\n",
+      "Test fold 1, Epoch [420], Average Loss: 0.02647441\n",
+      "Test fold 1, Epoch [430], Average Loss: 0.02584009\n",
+      "Test fold 1, Epoch [440], Average Loss: 0.02550978\n",
+      "Test fold 1, Epoch [450], Average Loss: 0.02677037\n",
+      "Test fold 1, Epoch [460], Average Loss: 0.02933162\n",
+      "Test fold 1, Epoch [470], Average Loss: 0.02438759\n",
+      "Test fold 1, Epoch [480], Average Loss: 0.02902519\n",
+      "Test fold 1, Epoch [490], Average Loss: 0.02928652\n",
+      "Early stopping triggered after 498 epochs.\n",
+      "Test fold 2, Epoch [0], Average Loss: 0.45303815\n",
+      "Test fold 2, Epoch [10], Average Loss: 0.38820647\n",
+      "Test fold 2, Epoch [20], Average Loss: 0.30255807\n",
+      "Test fold 2, Epoch [30], Average Loss: 0.27891048\n",
+      "Test fold 2, Epoch [40], Average Loss: 0.28041480\n",
+      "Test fold 2, Epoch [50], Average Loss: 0.26312853\n",
+      "Test fold 2, Epoch [60], Average Loss: 0.23893007\n",
+      "Test fold 2, Epoch [70], Average Loss: 0.20220750\n",
+      "Test fold 2, Epoch [80], Average Loss: 0.18193253\n",
+      "Test fold 2, Epoch [90], Average Loss: 0.15312428\n",
+      "Test fold 2, Epoch [100], Average Loss: 0.13846646\n",
+      "Test fold 2, Epoch [110], Average Loss: 0.12697245\n",
+      "Test fold 2, Epoch [120], Average Loss: 0.11534271\n",
+      "Test fold 2, Epoch [130], Average Loss: 0.12745948\n",
+      "Test fold 2, Epoch [140], Average Loss: 0.10322990\n",
+      "Test fold 2, Epoch [150], Average Loss: 0.09594768\n",
+      "Test fold 2, Epoch [160], Average Loss: 0.07338392\n",
+      "Test fold 2, Epoch [170], Average Loss: 0.06982030\n",
+      "Test fold 2, Epoch [180], Average Loss: 0.05910200\n",
+      "Test fold 2, Epoch [190], Average Loss: 0.05784622\n",
+      "Test fold 2, Epoch [200], Average Loss: 0.05147662\n",
+      "Test fold 2, Epoch [210], Average Loss: 0.04721758\n",
+      "Test fold 2, Epoch [220], Average Loss: 0.03940995\n",
+      "Test fold 2, Epoch [230], Average Loss: 0.03761177\n",
+      "Test fold 2, Epoch [240], Average Loss: 0.03638913\n",
+      "Test fold 2, Epoch [250], Average Loss: 0.04693919\n",
+      "Test fold 2, Epoch [260], Average Loss: 0.03040947\n",
+      "Test fold 2, Epoch [270], Average Loss: 0.03247121\n",
+      "Test fold 2, Epoch [280], Average Loss: 0.03219470\n",
+      "Test fold 2, Epoch [290], Average Loss: 0.02956380\n",
+      "Test fold 2, Epoch [300], Average Loss: 0.03092425\n",
+      "Test fold 2, Epoch [310], Average Loss: 0.03334789\n",
+      "Test fold 2, Epoch [320], Average Loss: 0.02810924\n",
+      "Test fold 2, Epoch [330], Average Loss: 0.03074779\n",
+      "Test fold 2, Epoch [340], Average Loss: 0.03299800\n",
+      "Test fold 2, Epoch [350], Average Loss: 0.03355553\n",
+      "Test fold 2, Epoch [360], Average Loss: 0.03163182\n",
+      "Test fold 2, Epoch [370], Average Loss: 0.02978436\n",
+      "Early stopping triggered after 379 epochs.\n",
+      "Test fold 3, Epoch [0], Average Loss: 0.48084313\n",
+      "Test fold 3, Epoch [10], Average Loss: 0.35900656\n",
+      "Test fold 3, Epoch [20], Average Loss: 0.31795804\n",
+      "Test fold 3, Epoch [30], Average Loss: 0.24630864\n",
+      "Test fold 3, Epoch [40], Average Loss: 0.21163512\n",
+      "Test fold 3, Epoch [50], Average Loss: 0.18549968\n",
+      "Test fold 3, Epoch [60], Average Loss: 0.16287054\n",
+      "Test fold 3, Epoch [70], Average Loss: 0.14437454\n",
+      "Test fold 3, Epoch [80], Average Loss: 0.11678588\n",
+      "Test fold 3, Epoch [90], Average Loss: 0.11048386\n",
+      "Test fold 3, Epoch [100], Average Loss: 0.08821002\n",
+      "Test fold 3, Epoch [110], Average Loss: 0.08216736\n",
+      "Test fold 3, Epoch [120], Average Loss: 0.07342083\n",
+      "Test fold 3, Epoch [130], Average Loss: 0.06660474\n",
+      "Test fold 3, Epoch [140], Average Loss: 0.05621167\n",
+      "Test fold 3, Epoch [150], Average Loss: 0.07246827\n",
+      "Test fold 3, Epoch [160], Average Loss: 0.04718811\n",
+      "Test fold 3, Epoch [170], Average Loss: 0.05003939\n",
+      "Test fold 3, Epoch [180], Average Loss: 0.04612538\n",
+      "Test fold 3, Epoch [190], Average Loss: 0.04831136\n",
+      "Test fold 3, Epoch [200], Average Loss: 0.05155084\n",
+      "Test fold 3, Epoch [210], Average Loss: 0.03558598\n",
+      "Test fold 3, Epoch [220], Average Loss: 0.04168203\n",
+      "Test fold 3, Epoch [230], Average Loss: 0.03624628\n",
+      "Test fold 3, Epoch [240], Average Loss: 0.04002713\n",
+      "Test fold 3, Epoch [250], Average Loss: 0.03674624\n",
+      "Test fold 3, Epoch [260], Average Loss: 0.03362014\n",
+      "Test fold 3, Epoch [270], Average Loss: 0.03891490\n",
+      "Test fold 3, Epoch [280], Average Loss: 0.03764762\n",
+      "Test fold 3, Epoch [290], Average Loss: 0.03316849\n",
+      "Test fold 3, Epoch [300], Average Loss: 0.03784303\n",
+      "Test fold 3, Epoch [310], Average Loss: 0.03079002\n",
+      "Test fold 3, Epoch [320], Average Loss: 0.04061870\n",
+      "Test fold 3, Epoch [330], Average Loss: 0.03107312\n",
+      "Test fold 3, Epoch [340], Average Loss: 0.03309848\n",
+      "Test fold 3, Epoch [350], Average Loss: 0.02918656\n",
+      "Test fold 3, Epoch [360], Average Loss: 0.03421692\n",
+      "Test fold 3, Epoch [370], Average Loss: 0.02974097\n",
+      "Test fold 3, Epoch [380], Average Loss: 0.02829250\n",
+      "Test fold 3, Epoch [390], Average Loss: 0.03023569\n",
+      "Test fold 3, Epoch [400], Average Loss: 0.03113860\n",
+      "Test fold 3, Epoch [410], Average Loss: 0.02817574\n",
+      "Test fold 3, Epoch [420], Average Loss: 0.03153631\n",
+      "Test fold 3, Epoch [430], Average Loss: 0.02661356\n",
+      "Test fold 3, Epoch [440], Average Loss: 0.03051933\n",
+      "Test fold 3, Epoch [450], Average Loss: 0.02452439\n",
+      "Test fold 3, Epoch [460], Average Loss: 0.02654275\n",
+      "Test fold 3, Epoch [470], Average Loss: 0.02935312\n",
+      "Test fold 3, Epoch [480], Average Loss: 0.02805381\n",
+      "Test fold 3, Epoch [490], Average Loss: 0.03026735\n",
+      "Test fold 3, Epoch [500], Average Loss: 0.02821378\n",
+      "Early stopping triggered after 501 epochs.\n",
+      "Test fold 4, Epoch [0], Average Loss: 0.46999193\n",
+      "Test fold 4, Epoch [10], Average Loss: 0.37867101\n",
+      "Test fold 4, Epoch [20], Average Loss: 0.37142501\n",
+      "Test fold 4, Epoch [30], Average Loss: 0.32571250\n",
+      "Test fold 4, Epoch [40], Average Loss: 0.26267972\n",
+      "Test fold 4, Epoch [50], Average Loss: 0.23519591\n",
+      "Test fold 4, Epoch [60], Average Loss: 0.21115578\n",
+      "Test fold 4, Epoch [70], Average Loss: 0.17378018\n",
+      "Test fold 4, Epoch [80], Average Loss: 0.14548803\n",
+      "Test fold 4, Epoch [90], Average Loss: 0.12096340\n",
+      "Test fold 4, Epoch [100], Average Loss: 0.09359447\n",
+      "Test fold 4, Epoch [110], Average Loss: 0.08599461\n",
+      "Test fold 4, Epoch [120], Average Loss: 0.21893286\n",
+      "Test fold 4, Epoch [130], Average Loss: 0.22300622\n",
+      "Test fold 4, Epoch [140], Average Loss: 0.16770542\n",
+      "Test fold 4, Epoch [150], Average Loss: 0.13059878\n",
+      "Test fold 4, Epoch [160], Average Loss: 0.08454977\n",
+      "Early stopping triggered after 167 epochs.\n",
+      "Test fold 5, Epoch [0], Average Loss: 0.45696180\n",
+      "Test fold 5, Epoch [10], Average Loss: 0.45155088\n",
+      "Test fold 5, Epoch [20], Average Loss: 0.45174614\n",
+      "Test fold 5, Epoch [30], Average Loss: 0.45063803\n",
+      "Test fold 5, Epoch [40], Average Loss: 0.42868554\n",
+      "Test fold 5, Epoch [50], Average Loss: 0.41120217\n",
+      "Test fold 5, Epoch [60], Average Loss: 0.43680281\n",
+      "Early stopping triggered after 69 epochs.\n",
+      "Test fold 6, Epoch [0], Average Loss: 0.47416714\n",
+      "Test fold 6, Epoch [10], Average Loss: 0.32484101\n",
+      "Test fold 6, Epoch [20], Average Loss: 0.29444666\n",
+      "Test fold 6, Epoch [30], Average Loss: 0.27669166\n",
+      "Test fold 6, Epoch [40], Average Loss: 0.23490866\n",
+      "Test fold 6, Epoch [50], Average Loss: 0.23161511\n",
+      "Test fold 6, Epoch [60], Average Loss: 0.19635068\n",
+      "Test fold 6, Epoch [70], Average Loss: 0.18853586\n",
+      "Test fold 6, Epoch [80], Average Loss: 0.16377735\n",
+      "Test fold 6, Epoch [90], Average Loss: 0.17664792\n",
+      "Test fold 6, Epoch [100], Average Loss: 0.13659372\n",
+      "Test fold 6, Epoch [110], Average Loss: 0.23871029\n",
+      "Test fold 6, Epoch [120], Average Loss: 0.21790932\n",
+      "Test fold 6, Epoch [130], Average Loss: 0.17080605\n",
+      "Test fold 6, Epoch [140], Average Loss: 0.14317141\n",
+      "Test fold 6, Epoch [150], Average Loss: 0.20538124\n",
+      "Early stopping triggered after 153 epochs.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data\n",
     "folds_df = pd.read_csv(f'../../training_data/{dataset}/folds.csv')\n",
@@ -137,41 +330,53 @@
     "        combined = list(zip(train_seqs, y_train))   # Combine sequences and targets\n",
     "        random.shuffle(combined)                    # Shuffle both train_seqs and y_train together\n",
     "        train_seqs, y_train = zip(*combined)        # Unzip them back into separate lists\n",
-    "        \n",
+    "\n",
     "        total_loss = 0\n",
+    "        nan_flag = False  # Flag to detect NaN loss\n",
+    "\n",
     "        for i, seq_input in enumerate(train_seqs):\n",
     "            # Prepare input and target for the current sequence\n",
     "            target = y_train[i].unsqueeze(0)  # Get the corresponding target for the sequence\n",
-    "            \n",
+    "\n",
     "            # Zero the gradients\n",
     "            optimizer.zero_grad()\n",
-    "            \n",
+    "\n",
     "            # Forward pass\n",
-    "            seq_input = seq_input.unsqueeze(0).unsqueeze(-1)    # Shape: (1, seq_length, input_size)\n",
-    "            output_seq = model(seq_input)                       # Get model output for the sequence\n",
+    "            seq_input = seq_input.unsqueeze(0).unsqueeze(-1)  # Shape: (1, seq_length, input_size)\n",
+    "            output_seq = model(seq_input)                     # Get model output for the sequence\n",
     "            loss = criterion(output_seq, target.unsqueeze(-1))  # Calculate loss\n",
-    "            \n",
+    "\n",
+    "            # Check for NaN loss\n",
+    "            if torch.isnan(loss).any():\n",
+    "                print(f\"NaN loss detected at Epoch [{epoch}], Step [{i}]. Saving model before NaN occurred.\")\n",
+    "                torch.save(best_model_state, 'model_before_nan.pth')  # Save model state before NaN loss\n",
+    "                nan_flag = True\n",
+    "                break  # Exit the training loop if NaN is encountered\n",
+    "\n",
     "            # Backward pass and optimize\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            \n",
+    "\n",
     "            total_loss += loss.item()\n",
-    "        \n",
+    "\n",
+    "        if nan_flag:\n",
+    "            break  # Stop training if NaN was encountered\n",
+    "\n",
     "        # Calculate average loss for this epoch\n",
     "        average_loss = total_loss / len(train_seqs)\n",
-    "        if epoch % 20 == 0:\n",
+    "        if epoch % 10 == 0:\n",
     "            print(f'Test fold {test_fold}, Epoch [{epoch}], Average Loss: {average_loss:.8f}')\n",
-    "        \n",
+    "\n",
     "        # Early stopping logic\n",
     "        if average_loss < best_loss:\n",
     "            best_loss = average_loss  # Update best loss\n",
     "            patience_counter = 0  # Reset patience counter\n",
-    "            \n",
+    "\n",
     "            # Save the best model parameters in memory\n",
     "            best_model_state = model.state_dict()  # Store the model parameters\n",
     "        else:\n",
     "            patience_counter += 1  # Increment patience counter\n",
-    "            \n",
+    "\n",
     "        # Stop training if patience is exceeded\n",
     "        if patience_counter >= patience:\n",
     "            print(f'Early stopping triggered after {epoch + 1} epochs.')\n",
@@ -207,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
