--- a/model/experiment/linear.ipynb
+++ b/model/experiment/linear.ipynb
@@ -41,16 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class SimpleNN(nn.Module):\n",
+    "class LinearModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
-    "        super(SimpleNN, self).__init__()\n",
-    "        self.fc1 = nn.Linear(input_size, 32)\n",
-    "        self.fc2 = nn.Linear(32, 1)\n",
-    "        self.leaky_relu = nn.LeakyReLU(negative_slope=0.01)\n",
+    "        super(LinearModel, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.leaky_relu(self.fc1(x))\n",
-    "        x = self.fc2(x)\n",
+    "        x = self.fc1(x)\n",
     "        return x"
    ]
   },
@@ -62,7 +59,7 @@
    "source": [
     "dataset = 'detailed'\n",
     "test_fold = 1\n",
-    "chosen_feature = ['log_range_value', 'log_variance', 'loglog_sum_diff', 'loglog_count']"
+    "chosen_feature = ['log_variance', 'loglog_count']"
    ]
   },
   {
@@ -74,13 +71,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [    0] \t Train Loss: 0.65791529 \t Val Loss: 0.66588324 \t Test Loss: 0.59350473\n",
-      "Epoch [  500] \t Train Loss: 0.22987390 \t Val Loss: 0.20247784 \t Test Loss: 0.19812684\n",
-      "Epoch [ 1000] \t Train Loss: 0.19832820 \t Val Loss: 0.17034726 \t Test Loss: 0.17474057\n",
-      "Epoch [ 1500] \t Train Loss: 0.19257626 \t Val Loss: 0.16581513 \t Test Loss: 0.17444940\n",
-      "Epoch [ 2000] \t Train Loss: 0.18715861 \t Val Loss: 0.16221151 \t Test Loss: 0.17440037\n",
-      "Early stopping at epoch 2187\n",
-      "Final Test Loss: 0.17505515\n"
+      "Epoch [    0] \t Train Loss: 0.67974937 \t  Test Loss: 0.62313509\n",
+      "Epoch [ 2000] \t Train Loss: 0.34137905 \t  Test Loss: 0.32024297\n",
+      "Epoch [ 4000] \t Train Loss: 0.29888001 \t  Test Loss: 0.26888582\n",
+      "Epoch [ 6000] \t Train Loss: 0.26347855 \t  Test Loss: 0.23464109\n",
+      "Epoch [ 8000] \t Train Loss: 0.24296018 \t  Test Loss: 0.21643445\n",
+      "Epoch [10000] \t Train Loss: 0.23558959 \t  Test Loss: 0.21018825\n",
+      "Epoch [12000] \t Train Loss: 0.23449254 \t  Test Loss: 0.20945330\n",
+      "Early stopping at epoch 13350\n",
+      "Final Test Loss: 0.20950758\n"
      ]
     }
    ],
@@ -105,25 +104,21 @@
     "y_train = target_df_train.iloc[:, 1:].to_numpy()\n",
     "y_test = target_df_test.iloc[:, 1:].to_numpy()\n",
     "\n",
-    "# Split the train set into subtrain and validation sets (e.g., 80% subtrain, 20% validation)\n",
-    "X_subtrain, X_val, y_subtrain, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=42)\n",
     "\n",
     "# Convert data to PyTorch tensors\n",
-    "X_subtrain_tensor = torch.tensor(X_subtrain, dtype=torch.float32)\n",
-    "y_subtrain_tensor = torch.tensor(y_subtrain, dtype=torch.float32)\n",
-    "X_val_tensor = torch.tensor(X_val, dtype=torch.float32)\n",
-    "y_val_tensor = torch.tensor(y_val, dtype=torch.float32)\n",
+    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
     "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
     "y_test_tensor = torch.tensor(y_test, dtype=torch.float32)\n",
     "\n",
     "# Initialize the model, loss function, and optimizer\n",
     "input_dim = X_train.shape[1]\n",
-    "model = SimpleNN(input_dim)\n",
+    "model = LinearModel(input_dim)\n",
     "criterion = SquaredHingeLoss()\n",
     "optimizer = optim.Adam(model.parameters())\n",
     "\n",
     "# Training with early stopping based on validation loss\n",
-    "best_val_loss = float('inf')\n",
+    "best_loss = float('inf')\n",
     "patience = 100\n",
     "patience_counter = 0\n",
     "\n",
@@ -132,35 +127,29 @@
     "    optimizer.zero_grad()\n",
     "    \n",
     "    # Forward pass on subtrain data\n",
-    "    outputs_subtrain = model(X_subtrain_tensor)\n",
-    "    train_loss = criterion(outputs_subtrain, y_subtrain_tensor)\n",
+    "    outputs_subtrain = model(X_train_tensor)\n",
+    "    train_loss = criterion(outputs_subtrain, y_train_tensor)\n",
     "    \n",
     "    # Backward pass and optimization\n",
     "    train_loss.backward()\n",
     "    optimizer.step()\n",
     "    \n",
-    "    # Evaluate on validation set\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        outputs_val = model(X_val_tensor)\n",
-    "        val_loss = criterion(outputs_val, y_val_tensor)\n",
-    "    \n",
     "    # Early stopping check based on validation loss\n",
-    "    val_loss_value = val_loss.item()\n",
-    "    if val_loss_value < best_val_loss:\n",
-    "        best_val_loss = val_loss_value\n",
+    "    train_loss_value = train_loss.item()\n",
+    "    if train_loss_value < best_loss:\n",
+    "        best_loss = train_loss_value\n",
     "        best_model = model.state_dict()  # Save the best model state\n",
     "        patience_counter = 0\n",
     "    else:\n",
     "        patience_counter += 1\n",
     "    \n",
     "    # Print train, validation, and test losses every 1000 epochs\n",
-    "    if epoch % 500 == 0:\n",
+    "    if epoch % 2000 == 0:\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
     "            outputs_test = model(X_test_tensor)\n",
     "            test_loss = criterion(outputs_test, y_test_tensor)\n",
-    "        print(f\"Epoch [{epoch:5d}] \\t Train Loss: {train_loss.item():.8f} \\t Val Loss: {val_loss_value:.8f} \\t Test Loss: {test_loss.item():.8f}\")\n",
+    "        print(f\"Epoch [{epoch:5d}] \\t Train Loss: {train_loss.item():.8f} \\t  Test Loss: {test_loss.item():.8f}\")\n",
     "    \n",
     "    if patience_counter >= patience:\n",
     "        print(f\"Early stopping at epoch {epoch}\")\n",
